
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2007-02-22 DP  1.6.3  Prevent the Edit Grid Filter causing a crash if an
                      invalid filter containing a % is used, per Erwin.
2007-02-16 DP  1.6.3  Fix a minor bug in app bundle creation for Mac [Florian
                      G. Pflug]
2007-02-05 DP  1.6.3  Fix the graphical explain to properly display backwards
                      index scan nodes, per Brendan O'Shea.
2007-02-05 DP  1.6.3  Fix default perspective names, per Ezequias
2007-02-05 DP  1.6.3  Monitor the streams again whilst backing up on Mac -
                      this no longer crashesin wx2.8. Per Dave Livesay.
2007-02-05 DP  1.6.3  Fix a crash on Mac that occurred when using some combo
                      boxes, per David Lowry.
2007-01-29 DP  1.6.3  Fix menu icon for Gnome [Nathan Egge]
2007-01-26 DP  1.6.3  Allow users with SUPERUSER but no other privilege flags
                      to create roles and databases etc. per Andy Shellam.
2007-01-22 DP  1.6.3  Handle non-default schema paths properly in the Foreign
                      Key dialogue, per Philipp Specht
2007-01-19 DP  1.6.3  Fix localisation of 'Tab' as a copy delimiter.
2007-01-17 DP  1.6.3  Update to support the changed syntax of pg_dump 8.2+.
2007-01-15 DP  1.6.3  Add support for Sun's compiler [Dhanaraj M]
2007-01-10 DP  1.6.3  Fix an issue in the Query Tool export option that could
                      result in blank lines in the export file, per Mathias
                      Durst and Mike.
2007-01-09 DP  1.6.3  Truncate comments containing \r\n correctly, per Erwin.
2007-01-09 DP  1.6.3  Fix query tool title which was unfortunately broken by