@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-02-23 DP  1.6.3  Use the correct version of the Slony scripts when 
+                      creating a new cluster, per Duncan Beeby.
 2007-02-22 DP  1.6.3  Prevent the Edit Grid Filter causing a crash if an
                       invalid filter containing a % is used, per Erwin.
 2007-02-16 DP  1.6.3  Fix a minor bug in app bundle creation for Mac [Florian
